--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ click==7.1.2
 click-plugins==1.1.1
 cligj==0.5.0
 Fiona==1.8.13.post1
+Flask==1.1.2
 geopandas==0.4.0
+itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 munch==2.5.0
@@ -20,3 +22,4 @@ PyYAML==5.3.1
 Shapely==1.7.0
 six==1.15.0
 tornado==6.0.4
+Werkzeug==1.0.1
