--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 attrs==19.3.0
-bokeh==1.0.4
+bokeh==1.4.0
+cffi==1.14.0
 click==7.1.2
 click-plugins==1.1.1
 cligj==0.5.0
+cryptography==2.9.2
 Fiona==1.8.13.post1
 Flask==1.1.2
 geopandas==0.4.0
@@ -14,6 +16,8 @@ numpy==1.18.4
 packaging==20.4
 pandas==0.23.4
 Pillow==7.1.2
+pycparser==2.20
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyproj==2.6.1.post1
 python-dateutil==2.8.1
@@ -22,4 +26,5 @@ PyYAML==5.3.1
 Shapely==1.7.0
 six==1.15.0
 tornado==6.0.4
+typing-extensions==3.7.4.2
 Werkzeug==1.0.1
